--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,7 @@ body {
   padding: 4vw;
   border:lime 3px solid;
   border-radius: 30px;
+  margin: 1vw;
   /* background:radial-gradient(black,blue,pink); */
 }
 .slider {
@@ -275,4 +276,16 @@ body {
 }
 .dmName {
   color:mediumspringgreen;
+}
+.rpl {
+  background-position: center;
+  transition: background 0.8s;
+}
+.rpl:hover {
+  background: #2c2c2c radial-gradient(circle, transparent 1%, #2a2a2b 1%) center/15000%;
+}
+.rpl:active {
+  background-color: #6eb9f7;
+  background-size: 100%;
+  transition: background 0s;
 }
