--- a/css/main.css
+++ b/css/main.css
@@ -360,3 +360,60 @@ body {
 #player:fullscreen {
     height: 90vh;
     }
+.tts_notvisit{
+  background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAAAMSURBVHicY2AY3AAAAKAAAbAGYhgAAAAASUVORK5CYII='/%3E%3C/defs%3E%3Cstyle%3E.a%7Bfill:%23808080%7D%3C/style%3E%3Cuse href='%23img1' x='0' y='0'/%3E%3Crect class='a' x='1' y='1' width='30' height='30' rx='3'%3E%3C/rect%3E%3C/svg%3E");
+  padding:10px;
+  margin:5px;
+  margin-bottom:10px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-size: 100% 100%;
+  width:30px;
+  height:30px;
+
+}
+.tts_notanswer{
+  background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAAAMSURBVHicY2AY3AAAAKAAAbAGYhgAAAAASUVORK5CYII='/%3E%3C/defs%3E%3Cstyle%3E.a%7Bfill:%23f00%7D%3C/style%3E%3Cuse href='%23img1' x='0' y='0'/%3E%3Crect class='a' x='1' y='1' width='30' height='30' rx='5'%3E%3C/rect%3E%3C/svg%3E");
+  padding:5px;
+  margin:5px;
+  margin-bottom:5px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-size: 100% 100%;
+  width:30px;
+  height:30px;
+
+}
+.tts_answered{
+  background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAAAMSURBVHicY2AY3AAAAKAAAbAGYhgAAAAASUVORK5CYII='/%3E%3C/defs%3E%3Cstyle%3E.a%7Bfill:%230f0%7D%3C/style%3E%3Cuse href='%23img1' x='0' y='0'/%3E%3Crect class='a' x='1' y='1' width='30' height='30' rx='5'%3E%3C/rect%3E%3C/svg%3E");
+  padding:5px;
+  margin:5px;
+  margin-bottom:5px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-size: 100% 100%;
+  width:30px;
+  height:30px;
+
+}
+.tts_review{
+  background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Ctitle%3ENew Project%3C/title%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRF////p8QbyAAAAAxJREFUeJxjYBjcAAAAoAABsAZiGAAAAABJRU5ErkJggg=='/%3E%3C/defs%3E%3Cstyle%3E .s0 %7B fill: %2300ffff %7D %3C/style%3E%3Cuse id='Background' href='%23img1' x='0' y='0'/%3E%3Crect id='Shape 1' class='s0' x='1' y='1' width='30' height='30' rx='10'%3E%3C/rect%3E%3C/svg%3E");  margin:5px;
+  margin-bottom:5px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-size: 100% 100%;
+  width:30px;
+  height:30px;
+
+}
+.tts_ansreview{
+  background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAAAMSURBVHicY2AY3AAAAKAAAbAGYhgAAAAASUVORK5CYII='/%3E%3C/defs%3E%3Cstyle%3E.a%7Bfill:%230ff%7D.b%7Bfill:%230f0%7D%3C/style%3E%3Cuse href='%23img1' x='0' y='0'/%3E%3Crect class='a' x='1' y='1' width='30' height='30' rx='10'%3E%3C/rect%3E%3Crect class='b' x='16' y='18' width='12' height='12' rx='15'%3E%3C/rect%3E%3Crect class='b' x='5' y='4' width='13' height='13' rx='15'%3E%3C/rect%3E%3C/svg%3E");
+  padding:5px;
+  margin:5px;
+  margin-top:5px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-size: 100% 100%;
+  width:30px;
+  height:30px;
+}
