--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ body {
   
   @media print
 {    
-  @page  { size: A4; margin: 25mm 25mm 25mm 25mm;  }
+  @page  { size: A4; margin: 3cm 25mm 25mm 25mm;  }
   /* body {
     margin:10px;
   } */
@@ -416,4 +416,11 @@ body {
   background-size: 100% 100%;
   width:30px;
   height:30px;
+}
+.dshbox_v2 {
+  padding: 4px;
+  border:lime 3px solid;
+  border-radius: 30px;
+  margin: 5px;
+  width:20vw;
 }
