--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,9 @@ body {
   font-size: small;
   color: grey;
 }
-
+#tmt_frame{
+  filter: invert(.9) saturate(0.5) hue-rotate(145deg);
+}
 .t_endon {
   font-size: small;
   color: grey;
