--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,25 @@ body {
   border: orangered 3px solid;
   width: 20vh;
 }
+.fto_box{
+  display: flex;
+  height:50px;
+  width:130px;
+  border-radius: 30px 30px 30px 30px;
+  background-color: #292f3a;
+  flex-direction: column;
+  align-items: center;
+  margin:5px;
+  padding:5px;
 
+}
+.fto_box_title{
+  font-size: 14px;
+  color:#a1f506
+}
+.fto_box_content{
+  font-size:20px;
+}
 .progressbar_tr {
   background-color: rgb(0, 225, 255);
   border-radius: 13px;
