--- a/css/main.css
+++ b/css/main.css
@@ -855,7 +855,9 @@ body {
   height: 30px;
 
 }
-
+.t_notes {
+  width:20vw;height:5vh;border: 3px cyan solid;color:white;margin:3px;
+}
 .tts_notanswer {
   background-image: url("data:image/svg+xml,%0A%3Csvg version='1.2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3Cimage width='32' height='32' id='img1' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQMAAABJtOi3AAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAAAMSURBVHicY2AY3AAAAKAAAbAGYhgAAAAASUVORK5CYII='/%3E%3C/defs%3E%3Cstyle%3E.a%7Bfill:%23f00%7D%3C/style%3E%3Cuse href='%23img1' x='0' y='0'/%3E%3Crect class='a' x='1' y='1' width='30' height='30' rx='5'%3E%3C/rect%3E%3C/svg%3E");
   padding: 5px;
