--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,17 @@ body {
   flex-direction: column;
   justify-content: left;
 }
+.tlinks_min {
+  height: max-content;
+  border: yellow 1px solid;
+  padding: 10px;
+  width: 350px;
+  border-radius: 100px;
+  margin: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
 
 .t_title {
   font-size: large;
