--- a/css/main.css
+++ b/css/main.css
@@ -833,7 +833,37 @@ body {
   display: none;
   margin-top: 1px;
   }
-  
+#prf_tab_t{
+  height:30vh;
+  object-fit: cover;
+  width:100%;
+  background: url("/assets/prf_background.webp"),url("/assets/prf_background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+#prf_email::before{
+  content:"✉ "
+}
+#prf_phone::before{
+  content:"☎ "
+}
+#prf_class::before{
+  content:"Class "
+}
+#prf_crton::before{
+  content:"Joined On "
+}
+#prf_tab_t_t{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left:40px;
+}
 #yt_progressBar div {
   height: 100%;
   width: 0;
