--- a/css/print.css
+++ b/css/print.css
@@ -1,3 +1,16 @@
+/* 
+Copyright 2021-23 Quarkz By Mr Techtroid
+
+All rights reserved by [Mr Techtroid]. This work is not open-source.
+
+No part of these HTML, CSS, and JavaScript files may be reproduced, distributed, 
+or transmitted in any form or by any means, including photocopying, recording, 
+or other electronic or mechanical methods, without the prior written permission 
+of the author, except in the case of brief quotations embodied in critical reviews 
+and certain other noncommercial uses permitted by copyright law.
+
+For permission requests, please contact [Mr Techtroid] at mrtechtroid@outlook.com . 
+*/
 @font-face {
   font-family: Nunito;
   src: url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
